--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "express": "^4.16.4",
         "google-spreadsheet": "^2.0.7",
         "heroku": "^7.19.4",
+        "method-override": "^3.0.0",
         "node": "^11.8.0",
         "serve-favicon": "^2.5.0"
     },
